click to put marker, switches between p1 and p2, not allowed to put markers on the same spot.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
     background-color: lavender;
 }
+
+#board {
+    border: 2px solid black;
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(3, 100px);
+    width: fit-content;
+}
+
+grid {
+    border: 1px solid black;
+}
