--- a/style.css
+++ b/style.css
@@ -1,8 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 body {
-    background-color: lavender;
+    font-family: 'Ubuntu', sans-serif;
+    background-color: #d0f3dc;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#header {
+    background-color: white;
+    width: 100%;
+    text-align: center;
+    padding: 2rem;
+    box-shadow: 0 5px 10px grey;
+}
+
+#header h1 {
+    margin: 0;
 }
 
 #board {
+    margin: 2rem;
     border: 2px solid black;
     display: grid;
     grid-template-columns: repeat(3, 100px);
@@ -12,4 +33,8 @@ body {
 
 grid {
     border: 1px solid black;
+}
+
+button {
+    font-family: 'Ubuntu' sans-serif;
 }
