--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+:root {
+    --pointer: 'all';
+}
+
 body {
     font-family: 'Ubuntu', sans-serif;
     background-color: #d0f3dc;
@@ -33,8 +37,31 @@ body {
 
 grid {
     border: 1px solid black;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    pointer-events: var(--pointer);
+}
+
+grid:hover {
+    transition: 1s;
+    background-color: #ececec;
+    cursor: pointer;
 }
 
 button {
     font-family: 'Ubuntu' sans-serif;
+}
+
+.filter-pink {
+    width: 70px;
+    height: auto;
+    filter: invert(63%) sepia(26%) saturate(7490%) hue-rotate(311deg) brightness(90%) contrast(97%);
+}
+
+.filter-yellow {
+    width: 70px;
+    height: auto;
+    filter: invert(98%) sepia(66%) saturate(1099%) hue-rotate(327deg) brightness(97%) contrast(108%);
 }
