--- a/style.css
+++ b/style.css
@@ -6,20 +6,37 @@
 
 body {
     font-family: 'Ubuntu', sans-serif;
-    background-color: #d0f3dc;
-    margin: 0;
+    background-color: #465362;
+    margin: 10rem 0;
     padding: 0;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+}
+
+#content {
+    background-color: #F4FFFD;
+    display: flex;
+    width: fit-content;
+    flex-direction: row-reverse;
     align-items: center;
+    justify-content: center;
+    box-shadow: 0 5px 10px grey;
+    margin: 1rem;
+    border-radius: 15px;
 }
 
 #header {
-    background-color: white;
-    width: 100%;
-    text-align: center;
-    padding: 2rem;
-    box-shadow: 0 5px 10px grey;
+    background-color: inherit;
+    border-left: 10px double #F9DC5C;
+    color: #011936;
+    height: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 3rem;
+    padding: 1rem;
+    height: 80%;
+    align-items: center;
 }
 
 #header h1 {
@@ -28,15 +45,28 @@ body {
 
 #board {
     margin: 2rem;
-    border: 2px solid black;
+    border: 2px solid #011936;
     display: grid;
     grid-template-columns: repeat(3, 100px);
     grid-template-rows: repeat(3, 100px);
     width: fit-content;
 }
 
+resultDisplay{
+    display: none;
+    background-color: #000000af;
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 2rem;
+    font-weight: 400;
+}
+
 grid {
-    border: 1px solid black;
+    border: 1px solid grey;
     background-color: white;
     display: flex;
     align-items: center;
@@ -46,12 +76,26 @@ grid {
 
 grid:hover {
     transition: 1s;
-    background-color: #ececec;
+    background-color: #cccccc;
     cursor: pointer;
 }
 
 button {
     font-family: 'Ubuntu' sans-serif;
+    color: white;
+    font-size: 1.3rem;
+    border: none;
+    background-color: #E05263;
+    cursor: pointer;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    font-weight: 600;
+    width: 8rem;
+}
+
+button:hover {
+    transition: 1s;
+    background-color: #F9DC5C;
 }
 
 .filter-pink {
@@ -63,5 +107,15 @@ button {
 .filter-yellow {
     width: 70px;
     height: auto;
-    filter: invert(98%) sepia(66%) saturate(1099%) hue-rotate(327deg) brightness(97%) contrast(108%);
+    filter: invert(93%) sepia(77%) saturate(682%) hue-rotate(329deg) brightness(96%) contrast(104%);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    transition: 1s;
+    color: grey;
 }
